# PokerEngine

./: .editorconfig  CMakeLists.txt  LICENSE  README.md
data/: 2hands.csv  3hands.csv  4hands.csv  5hands.csv  6hands.csv  7hands.csv  8hands.csv
scripts/: .gitignore  scrapper.py
src/: CMakeLists.txt  pokerclient.cpp
src/helpers/: CMakeLists.txt  helpers.cpp  helpers.hpp
src/libpokercore/: CMakeLists.txt  pokercore.cpp  pokercore.h
src/libpokerengine/: CMakeLists.txt  pokerengine.cpp  pokerengine.hpp
src/python/: CMakeLists.txt  __init__.py  pypoker.cpp  pypokerclient.py
test/: .gitignore  CMakeLists.txt  test_2hands.cpp.in  test_3hands.cpp.in  test_5hands.cpp.in  test_6hands.cpp.in  test_7hands.cpp.in  test_8hands.cpp.in
